# tux-io-encoding

./: Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: commit.yml
cli/: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/object_type/: mod.rs
macros/src/value_enum/: mod.rs
src/: compression_types.rs  header.rs  lib.rs  tags.rs  tokio_io.rs  types.rs  value.rs
src/compression_types/: types.rs
src/fs/: mod.rs
src/tags/: meta_key.rs
src/types/: alloc.rs  bytes.rs  map.rs  num.rs  option.rs  time.rs  uuid_impl.rs
src/types/time/: chrono_impl.rs
