[workspace]
members = [ "cli","macros"]
resolver = "3"
[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Wyatt Herkamp <wherkamp@gmail.com>"]
repository = "https://github.com/wyatt-herkamp/tux-io-encoding"
[workspace.dependencies]

[package]
name = "tux-io-encoding"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tux-io-encoding-macros = { path = "./macros" }
thiserror = "2"
uuid = { version = "1", optional = true }
http = "1"
bytes = {version = "1", optional = true}
get-size2 = { version = "0.7", optional = true }


chrono = {version = "0.4", optional = true}

tokio = { version = "1", features = ["io-util"], optional = true}
